@@ -6145,6 +6145,78 @@ block|}
 argument_list|)
 expr_stmt|;
 block|}
+DECL|method|testEmpty
+specifier|public
+name|void
+name|testEmpty
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Tokenizer
+name|tokenizer
+init|=
+operator|new
+name|MockTokenizer
+argument_list|()
+decl_stmt|;
+name|tokenizer
+operator|.
+name|setReader
+argument_list|(
+operator|new
+name|StringReader
+argument_list|(
+literal|"aa bb"
+argument_list|)
+argument_list|)
+expr_stmt|;
+try|try
+block|{
+operator|new
+name|SynonymFilter
+argument_list|(
+name|tokenizer
+argument_list|,
+operator|new
+name|SynonymMap
+operator|.
+name|Builder
+argument_list|(
+literal|true
+argument_list|)
+operator|.
+name|build
+argument_list|()
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"did not hit expected exception"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IllegalArgumentException
+name|iae
+parameter_list|)
+block|{
+comment|// expected
+name|assertEquals
+argument_list|(
+literal|"fst must be non-null"
+argument_list|,
+name|iae
+operator|.
+name|getMessage
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 block|}
 end_class
 
